<resources>
    <string name="app_name">Foody</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Food Joke</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="recipes_not_found">Recipes not found.</string>
    <string name="food_joke_not_found">Food joke not found.</string>
    <string name="api_key_limited">API Key Limited.</string>
    <string name="back_online">We\'re back online</string>
    <string name="timeout">Timeout</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save To Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="favorite_recipe_delete">Favorite Recipe Delete</string>
    <string name="items_selected">items selected</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="share">Share</string>
</resources>