<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.overview.OverviewFragment">


    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/viewGradientOverlay"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMain"
        app:layout_constraintEnd_toEndOf="@+id/ivMain"
        app:layout_constraintStart_toStartOf="@+id/ivMain"
        app:layout_constraintTop_toTopOf="@+id/ivMain"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivMain"
        app:layout_constraintEnd_toEndOf="@+id/viewGradientOverlay" />

    <ImageView
        android:id="@+id/ivTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintEnd_toEndOf="@+id/tvTime"
        app:layout_constraintStart_toStartOf="@+id/tvTime"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTime"
        app:layout_constraintEnd_toStartOf="@+id/tvTime" />

    <ImageView
        android:id="@+id/ivLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/tvLikes"
        app:layout_constraintEnd_toEndOf="@+id/tvLikes"
        app:layout_constraintStart_toStartOf="@+id/tvLikes"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMain" />

    <ImageView
        android:id="@+id/ivCheckVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tvCheckVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheckVegetarian"
        app:layout_constraintStart_toEndOf="@+id/ivCheckVegetarian"
        app:layout_constraintTop_toTopOf="@+id/ivCheckVegetarian" />

    <ImageView
        android:id="@+id/ivCheckVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/ivCheckVegetarian"
        app:layout_constraintTop_toBottomOf="@+id/ivCheckVegetarian"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tvCheckVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheckVegan"
        app:layout_constraintStart_toEndOf="@+id/ivCheckVegan"
        app:layout_constraintTop_toTopOf="@+id/ivCheckVegan" />

    <ImageView
        android:id="@+id/ivCheckDairyFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/tvCheckVegetarian"
        app:layout_constraintStart_toEndOf="@+id/tvCheckVegetarian"
        app:layout_constraintTop_toTopOf="@+id/tvCheckVegetarian"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tvCheckDairyFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheckDairyFree"
        app:layout_constraintStart_toEndOf="@+id/ivCheckDairyFree"
        app:layout_constraintTop_toTopOf="@+id/ivCheckDairyFree" />

    <ImageView
        android:id="@+id/ivCheckGlutenFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/ivCheckDairyFree"
        app:layout_constraintTop_toBottomOf="@+id/ivCheckDairyFree"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tvCheckGlutenFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheckGlutenFree"
        app:layout_constraintStart_toEndOf="@+id/ivCheckGlutenFree"
        app:layout_constraintTop_toTopOf="@+id/ivCheckGlutenFree" />

    <ImageView
        android:id="@+id/ivCheckHealthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintBottom_toBottomOf="@+id/tvCheckDairyFree"
        app:layout_constraintStart_toEndOf="@+id/tvCheckDairyFree"
        app:layout_constraintTop_toTopOf="@+id/tvCheckDairyFree"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tvCheckHealthy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheckHealthy"
        app:layout_constraintStart_toEndOf="@+id/ivCheckHealthy"
        app:layout_constraintTop_toTopOf="@+id/ivCheckHealthy" />

    <ImageView
        android:id="@+id/ivCheckCheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@+id/ivCheckHealthy"
        app:layout_constraintTop_toBottomOf="@+id/ivCheckHealthy"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/tvCheckCheap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        app:layout_constraintBottom_toBottomOf="@+id/ivCheckCheap"
        app:layout_constraintStart_toEndOf="@+id/ivCheckCheap"
        app:layout_constraintTop_toTopOf="@+id/ivCheckCheap" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCheckVegan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Summary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>